[tool.poetry]
name = "tsuki"
version = "0.1.0"
description = "Package to draw images with moon emoji"
authors = ["wataoka <wataoka.koki@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
emoji = "^2.6.0"
Pillow = "^9.5.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
